--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
-Hello world!
-Et tou ceux qui ne parlent pas anglais...
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title id="title">Kyrazail Adventure Redirect</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="apple-touch-icon" href="./favicon.ico>
+    <link rel=" icon" href="./favicon.ico type=" image/png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <script>
+        window.onload = () => {
+            window.location.href = "./en/index.html"
+        }
+    </script>
+    <noscript>
+        <meta http-equiv="refresh" content="0; url=./en/index.html" />
+    </noscript>
+</body>
+
+</html>
