--- a/en/index.html
+++ b/en/index.html
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../resources/Styles/main.css">
-    <script src="./script.js" type="text/javascript"></script>
-    <script src="./Plugins/modernizr-custom.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../resources/Plugins/normalize.css">
+    <script src="../resources/Plugins/modernizr-custom.js" type="text/javascript"></script>
 </head>
 
 <body style="text-align: center;">
