--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <title id="title">Kyrazail Adventure</title>
@@ -13,16 +13,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../resources/Styles/main.css">
+    <link rel="stylesheet" href="../resources/Styles/dropdown.css">
+    <link rel="stylesheet" href="../resources/Styles/animations.css">
+    <link rel="stylesheet" href="../resources/Styles/navigation.css">
     <link rel="stylesheet" href="../resources/Plugins/normalize.css">
     <script src="../resources/Plugins/modernizr-custom.js" type="text/javascript"></script>
 </head>
 
 <body style="text-align: center;">
-    <h1>Arrive bientot!</h1>
-    <p>Plus d'infos sur notre <a href="https://discord.gg/5mF5AHnRCr" target="_blank">serveur Discord!</a></p>
-    <iframe src="https://discord.com/widget?id=967813750067454052&theme=dark" width="350" height="500"
-        allowtransparency="true" frameborder="0"
-        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <p id="secret" style="height: 80px;">Stop messing with the code!</p>
+    <div class="navBar">
+        <div class="container">
+            <ul class="navigation">
+                <li><a href="#aboutMeTitle">Jeux</a></li>
+                <li><a href="#projectTitle">Développement</a></li>
+            </ul>
+            <ul class="parameters">
+                <li class="dropdown">
+                    <span class="dropbtn">Thème</span>
+                    <div class="dropdown-content">
+                        <a href="#">Clair</a>
+                        <a href="#">Sombre</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <span class="dropbtn">Langue</spawn>
+                        <div class="dropdown-content">
+                            <a href="#">Français</a>
+                            <a href="../en/index.html">English</a>
+                        </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div>
+        <h1>Arrive bientôt!</h1>
+        <p>Plus d'information sur notre <a href="https://discord.gg/5mF5AHnRCr" target="_blank">serveur Discord!</a></p>
+        <iframe src="https://discord.com/widget?id=967813750067454052&theme=dark" width="350" height="500"
+            allowtransparency="true" frameborder="0"
+            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    </div>
 </body>
 
 </html>
