--- a/fr/index.html
+++ b/fr/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body style="text-align: center;">
-    <p id="secret" style="height: 80px;">Stop messing with the code!</p>
+    <p id="secret" style="height: 80px;">Arrêtez de modifier le code!</p>
     <div class="navBar">
         <div class="container">
             <ul class="navigation">
