--- a/en/index.html
+++ b/en/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="../resources/Styles/dropdown.css">
     <link rel="stylesheet" href="../resources/Styles/animations.css">
     <link rel="stylesheet" href="../resources/Styles/navigation.css">
+    <script src="../resources/js/main.js" type="text/javascript"></script>
+
     <link rel="stylesheet" href="../resources/Plugins/normalize.css">
     <script src="../resources/Plugins/modernizr-custom.js" type="text/javascript"></script>
 </head>
@@ -25,35 +27,53 @@
     <div class="navBar">
         <div class="container">
             <ul class="navigation">
-                <li><a href="#aboutMeTitle">Game</a></li>
-                <li><a href="#projectTitle">Development</a></li>
+                <li><a href="#Game">Game</a></li>
+                <li><a href="#Development">Development</a></li>
             </ul>
             <ul class="parameters">
                 <li class="dropdown">
                     <span class="dropbtn">Theme</span>
                     <div class="dropdown-content">
-                        <a href="#">Light</a>
-                        <a href="#">Dark</a>
+                        <a onclick="toggleTheme('light')">Light</a>
+                        <a onclick="toggleTheme('dark')">Dark</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <span class="dropbtn">Language</spawn>
-                        <div class="dropdown-content">
-                            <a href="../fr/index.html">Français</a>
-                            <a href="#">English</a>
-                        </div>
+                    <span class="dropbtn">Language</span>
+                    <div class="dropdown-content">
+                        <a href="../fr/index.html">Français</a>
+                        <a href="#">English</a>
+                    </div>
                 </li>
             </ul>
         </div>
     </div>
 
     <div>
+        <div id="Hub">
+            <h1>Welcome on this page</h1>
+        </div>
+
+        <div id="Game">
+            <div class="title">About the game</div>
+            <div lass="content">
+
+            </div>
+        </div>
+
+        <div id="Development">
+            <div class="title">Development news</div>
+            <div lass="content"></div>
+        </div>
+    </div>
+
+    <!-- <div>
         <h1>Coming soon!</h1>
         <p>More informations on our <a href="https://discord.gg/5mF5AHnRCr" target="_blank">Discord server!</a></p>
         <iframe src="https://discord.com/widget?id=967813750067454052&theme=dark" width="350" height="500"
             allowtransparency="true" frameborder="0"
             sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-    </div>
+    </div> -->
 </body>
 
 </html>
