--- a/fr/index.html
+++ b/fr/index.html
@@ -37,11 +37,11 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <span class="dropbtn">Langue</spawn>
-                        <div class="dropdown-content">
-                            <a href="#">Français</a>
-                            <a href="../en/index.html">English</a>
-                        </div>
+                    <span class="dropbtn">Langue</span>
+                    <div class="dropdown-content">
+                        <a href="#">Français</a>
+                        <a href="../en/index.html">English</a>
+                    </div>
                 </li>
             </ul>
         </div>
