--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title id="title">Kyrazail Adventure Redirect</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="apple-touch-icon" href="./favicon.ico>
-    <link rel=" icon" href="./favicon.ico type=" image/png">
+    <link rel="apple-touch-icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.ico" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
