--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title id="title">Kyrazail Adventure Redirect</title>
+    <title id="title">Kyrazail Adventure</title>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="apple-touch-icon" href="./favicon.ico">
     <link rel="icon" href="./favicon.ico" type="image/png">
@@ -12,17 +12,105 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./resources/Styles/main.css">
+    <link rel="stylesheet" href="./resources/Styles/dropdown.css">
+    <link rel="stylesheet" href="./resources/Styles/animations.css">
+    <link rel="stylesheet" href="./resources/Styles/navigation.css">
+    <script src="./resources/js/main.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="./resources/Plugins/normalize.css">
+    <script src="./resources/Plugins/modernizr-custom.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <script>
-        window.onload = () => {
-            window.location.href = "./en/index.html"
-        }
-    </script>
-    <noscript>
-        <meta http-equiv="refresh" content="0; url=./en/index.html" />
-    </noscript>
+    <div class="wrapper">
+        <p id="secret" style="height: 80px;" class="lang">Stop messing with the code!</p>
+        <div class="navBar">
+            <div class="container">
+                <ul class="navigation">
+                    <li><a href="#Game" class="lang">Jeu</a></li>
+                    <li><a href="#Development" class="lang">Développement</a></li>
+                </ul>
+                <ul class="parameters">
+                    <li class="dropdown">
+                        <span class="dropbtn lang">Mini games</span>
+                        <div class="dropdown-content">
+                            <a href="./Asteroid">Asteroid</a>
+                            <a href="./Lantern">Lantern</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <span class="dropbtn lang">Thème</span>
+                        <div class="dropdown-content">
+                            <a onclick="toggleTheme('light')" class="lang">Clair</a>
+                            <a onclick="toggleTheme('dark')" class="lang">Sombre</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <span class="dropbtn" class="lang">Langage</span>
+                        <div class="dropdown-content">
+                            <a href="?lang=fr">Français</a>
+                            <a href="?lang=en">English</a>
+                            <!-- TODO -->
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- <div>
+            <div id="Hub">
+                <h1 class="title lang">Welcome on this page</h1>
+            </div>
+
+            <div id="Game">
+                <div class="title lang">About the game</div>
+                <div class="content">
+
+                </div>
+            </div>
+
+            <div id="Development">
+                <div class="title lang">Development news</div>
+                <div class="content"></div>
+            </div>
+        </div> -->
+
+        <div style="text-align:center;">
+            <h1 class="lang">Arrive bientôt!</h1>
+            <p class="lang">Plus d'informations sur notre <a href="https://discord.gg/5mF5AHnRCr"
+                    target="_blank">serveur
+                    Discord!</a></p>
+            <iframe src="https://discord.com/widget?id=967813750067454052&theme=dark" width="350" height="500"
+                allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
+    </div>
+    <footer>
+        <div class="copyright">
+            <img src="./favicon.ico" alt="GameIcon" height="30px">
+            <p id="copyrightJS"></p>
+            <a href="./LICENSE.txt" id="copyrightJSLicense"></a>
+        </div>
+        <div class="footerGrid">
+            <div class="footerGridItem">
+                <h5 class="lang">Contactez nous:</h5>
+                <ul class="column">
+                    <li><a href="mailto:kyra.devs@gmail.com">kyra.devs@gmail.com</a></li>
+                    <li><a href="https://discord.gg/5mF5AHnRCr" class="lang">Serveur Discord</a></li>
+                </ul>
+            </div>
+            <div class="footerGridItem">
+                <h5 class="lang">Liens:</h5>
+                <ul class="column">
+                    <li><a href="https://shadowoftheredfox.itch.io/kyrazail-adventure" class="lang">Jeu en ligne</a>
+                    </li>
+                    <li><a href="https://github.com/ShadowoftheRedFox/Kyrazail-Adventure-Dev" class="lang">Code
+                            source</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
