--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/Styles/main.css">
     <link rel="stylesheet" href="./resources/Styles/dropdown.css">
-    <link rel="stylesheet" href="./resources/Styles/animations.css">
+    <link rel="stylesheet" href="./resources/Styles/page.css">
     <link rel="stylesheet" href="./resources/Styles/navigation.css">
     <script src="./resources/js/main.js" type="text/javascript"></script>
 
@@ -28,8 +28,8 @@
         <div class="navBar">
             <div class="container">
                 <ul class="navigation">
-                    <li><a href="#Game" class="lang">Jeu</a></li>
-                    <li><a href="#Development" class="lang">Développement</a></li>
+                    <li><a href="#Game" class="lang">Game</a></li>
+                    <li><a href="#Development" class="lang">Development</a></li>
                 </ul>
                 <ul class="parameters">
                     <li class="dropdown">
@@ -40,10 +40,10 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <span class="dropbtn lang">Thème</span>
+                        <span class="dropbtn lang">Theme</span>
                         <div class="dropdown-content">
-                            <a onclick="toggleTheme('light')" class="lang">Clair</a>
-                            <a onclick="toggleTheme('dark')" class="lang">Sombre</a>
+                            <a onclick="toggleTheme('light')" class="lang">Bright</a>
+                            <a onclick="toggleTheme('dark')" class="lang">Dark</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -77,10 +77,9 @@
         </div> -->
 
         <div style="text-align:center;">
-            <h1 class="lang">Arrive bientôt!</h1>
-            <p class="lang">Plus d'informations sur notre <a href="https://discord.gg/5mF5AHnRCr"
-                    target="_blank">serveur
-                    Discord!</a></p>
+            <h1 class="lang">Coming soon!</h1>
+            <p class="lang">More informations on our <a href="https://discord.gg/5mF5AHnRCr" target="_blank">Discord
+                    server!</a></p>
             <iframe src="https://discord.com/widget?id=967813750067454052&theme=dark" width="350" height="500"
                 allowtransparency="true" frameborder="0"
                 sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
@@ -94,19 +93,18 @@
         </div>
         <div class="footerGrid">
             <div class="footerGridItem">
-                <h5 class="lang">Contactez nous:</h5>
+                <h5 class="lang">Contact us:</h5>
                 <ul class="column">
                     <li><a href="mailto:kyra.devs@gmail.com">kyra.devs@gmail.com</a></li>
-                    <li><a href="https://discord.gg/5mF5AHnRCr" class="lang">Serveur Discord</a></li>
+                    <li><a href="https://discord.gg/5mF5AHnRCr" class="lang">Discord server</a></li>
                 </ul>
             </div>
             <div class="footerGridItem">
                 <h5 class="lang">Liens:</h5>
                 <ul class="column">
-                    <li><a href="https://shadowoftheredfox.itch.io/kyrazail-adventure" class="lang">Jeu en ligne</a>
-                    </li>
-                    <li><a href="https://github.com/ShadowoftheRedFox/Kyrazail-Adventure-Dev" class="lang">Code
-                            source</a></li>
+                    <li><a href="https://shadowoftheredfox.itch.io/kyrazail-adventure" class="lang">Online game</a></li>
+                    <li><a href="https://github.com/ShadowoftheRedFox/Kyrazail-Adventure-Dev" class="lang">Source
+                            code</a></li>
                 </ul>
             </div>
         </div>
