added minigame link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 <body>
     <div class="wrapper">
-        <p id="secret" style="height: 80px;" class="lang">Stop messing with the code!</p>
+        <a id="secret" style="height: 80px;" class="lang" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Stop
+            messing with the code!</a>
         <div class="navBar">
             <div class="container">
                 <ul class="navigation">
@@ -33,7 +34,8 @@
                 </ul>
                 <ul class="parameters">
                     <li class="dropdown">
-                        <span class="dropbtn lang">Mini games</span>
+                        <span class="dropbtn lang"><a href="./minigames/index.html" class="lang">Mini
+                                games</a></span>
                         <div class="dropdown-content">
                             <a href="./Asteroid">Asteroid</a>
                             <a href="./Lantern">Lantern</a>
@@ -49,8 +51,8 @@
                     <li class="dropdown">
                         <span class="dropbtn" class="lang">Langage</span>
                         <div class="dropdown-content">
-                            <a href="?lang=fr">Français</a>
-                            <a href="?lang=en">English</a>
+                            <a href="?lang=fr" onclick="switchLang('fr')">Français</a>
+                            <a href="?lang=en" onclick="switchLang('en')">English</a>
                             <!-- TODO -->
                         </div>
                     </li>
