--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </ul>
                 <ul class="parameters">
                     <li class="dropdown">
-                        <span class="dropbtn lang"><a href="./minigames/index.html" class="lang">Mini
-                                games</a></span>
+                        <a href="./minigames/index.html"><span class="dropbtn lang">Mini
+                                games</span></a>
                         <div class="dropdown-content">
                             <a href="./Asteroid">Asteroid</a>
                             <a href="./Lantern">Lantern</a>
