added the chess minigame redirection

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <div class="dropdown-content">
                             <a href="./Asteroid">Asteroid</a>
                             <a href="./Lantern">Lantern</a>
+                            <a href="./Eches">Chess</a>
                         </div>
                     </li>
                     <li class="dropdown">
