--- a/minigames/index.html
+++ b/minigames/index.html
@@ -62,7 +62,7 @@
             <h1 class="title">Why mini games?</h1>
             <div class="description">
                 <p>I made mini games mostly for fun, and to try different kind of method that I might need to use in the
-                    future. Those mini games are just exemples I made width.</p>
+                    future. Those mini games are just exemples I made.</p>
                 <p>Here is some informations about those:</p>
                 <h3 class="title">Asteroid:</h3>
                 <p>You're a spaceship, and your goal is to reach the highest score you can.<br>Even is the gameplay is
